# software-project-management

./: .gitignore  Calculo EVM.txt  Documento_Requisitos.docx  Horas requisitos.txt  README.md  cronograma_projectlibre.pod  integrantes_do_grupo.txt  package-lock.json
backend/: .env.example  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
backend/midias/: manage.py
backend/midias/comment/: models.py  serializers.py  urls.py  views.py
backend/midias/comment/migrations/: 0001_initial.py
backend/midias/lista/: admin.py  models.py  serializers.py  urls.py  views.py
backend/midias/lista/migrations/: 0001_initial.py  0002_rename_listas_lista_user.py  0003_alter_lista_midias.py  0004_alter_lista_midias.py  0005_alter_lista_midias.py  0006_alter_lista_midias.py
backend/midias/midia/: admin.py  models.py  serializers.py  urls.py  views.py
backend/midias/midia/migrations/: 0001_initial.py  0002_alter_midia_genres_alter_midia_platforms.py  0003_alter_midia_genres.py  0004_alter_midia_genres.py  0005_alter_midia_banner.py  0006_alter_game_avarage_playtime.py  0006_alter_midia_banner.py  0007_alter_movie_cast.py  0008_remove_midia_genres_delete_genres_midia_genres.py  0009_serie_created_by.py  0010_remove_midia_platforms_delete_platforms_and_more.py  0011_remove_game_avarage_price_remove_game_release_date.py  (+6 more)
backend/midias/midias/: asgi.py  settings.py  urls.py  wsgi.py
backend/midias/review/: admin.py  models.py  serializers.py  urls.py  views.py
backend/midias/user/: admin.py  models.py  serializers.py  urls.py  views.py
(+140 files in other folders)
