[tool.poetry]
name = "midias"
version = "0.1.0"
description = "Plataforma de midias e reviews"
authors = ["brito1212 <felipef_brito@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.5.0"
drf-social-oauth2 = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
